src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__json_placeholder.snap
---
source: src/core/ir/jit/synth.rs
expression: "serde_json::to_string_pretty(&val).unwrap()"
---
{
  "data": {
    "posts": [
      {
        "id": 1,
        "title": "sunt aut facere repellat provident occaecati excepturi optio reprehenderit",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 2,
        "title": "qui est esse",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 3,
        "title": "ea molestias quasi exercitationem repellat qui ipsa sit aut",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 4,
        "title": "eum et est occaecati",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 5,
        "title": "nesciunt quas odio",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 6,
        "title": "dolorem eum magni eos aperiam quia",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 7,
        "title": "magnam facilis autem",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 8,
        "title": "dolorem dolore est ipsam",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 9,
        "title": "nesciunt iure omnis dolorem tempora et accusantium",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 10,
        "title": "optio molestias id quia eum",
        "user": {
          "id": 1,
          "name": "Leanne Graham"
        }
      },
      {
        "id": 11,
        "title": "et ea vero quia laudantium autem",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 12,
        "title": "in quibusdam tempore odit est dolorem",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 13,
        "title": "dolorum ut in voluptas mollitia et saepe quo animi",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 14,
        "title": "voluptatem eligendi optio",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 15,
        "title": "eveniet quod temporibus",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 16,
        "title": "sint suscipit perspiciatis velit dolorum rerum ipsa laboriosam odio",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 17,
        "title": "fugit voluptas sed molestias voluptatem provident",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 18,
        "title": "voluptate et itaque vero tempora molestiae",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 19,
        "title": "adipisci placeat illum aut reiciendis qui",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 20,
        "title": "doloribus ad provident suscipit at",
        "user": {
          "id": 2,
          "name": "Ervin Howell"
        }
      },
      {
        "id": 21,
        "title": "asperiores ea ipsam voluptatibus modi minima quia sint",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 22,
        "title": "dolor sint quo a velit explicabo quia nam",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 23,
        "title": "maxime id vitae nihil numquam",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 24,
        "title": "autem hic labore sunt dolores incidunt",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 25,
        "title": "rem alias distinctio quo quis",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 26,
        "title": "est et quae odit qui non",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 27,
        "title": "quasi id et eos tenetur aut quo autem",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 28,
        "title": "delectus ullam et corporis nulla voluptas sequi",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 29,
        "title": "iusto eius quod necessitatibus culpa ea",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 30,
        "title": "a quo magni similique perferendis",
        "user": {
          "id": 3,
          "name": "Clementine Bauch"
        }
      },
      {
        "id": 31,
        "title": "ullam ut quidem id aut vel consequuntur",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 32,
        "title": "doloremque illum aliquid sunt",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 33,
        "title": "qui explicabo molestiae dolorem",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 34,
        "title": "magnam ut rerum iure",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 35,
        "title": "id nihil consequatur molestias animi provident",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 36,
        "title": "fuga nam accusamus voluptas reiciendis itaque",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 37,
        "title": "provident vel ut sit ratione est",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 38,
        "title": "explicabo et eos deleniti nostrum ab id repellendus",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 39,
        "title": "eos dolorem iste accusantium est eaque quam",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 40,
        "title": "enim quo cumque",
        "user": {
          "id": 4,
          "name": "Patricia Lebsack"
        }
      },
      {
        "id": 41,
        "title": "non est facere",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 42,
        "title": "commodi ullam sint et excepturi error explicabo praesentium voluptas",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 43,
        "title": "eligendi iste nostrum consequuntur adipisci praesentium sit beatae perferendis",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 44,
        "title": "optio dolor molestias sit",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 45,
        "title": "ut numquam possimus omnis eius suscipit laudantium iure",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 46,
        "title": "aut quo modi neque nostrum ducimus",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 47,
        "title": "quibusdam cumque rem aut deserunt",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 48,
        "title": "ut voluptatem illum ea doloribus itaque eos",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 49,
        "title": "laborum non sunt aut ut assumenda perspiciatis voluptas",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 50,
        "title": "repellendus qui recusandae incidunt voluptates tenetur qui omnis exercitationem",
        "user": {
          "id": 5,
          "name": "Chelsey Dietrich"
        }
      },
      {
        "id": 51,
        "title": "soluta aliquam aperiam consequatur illo quis voluptas",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 52,
        "title": "qui enim et consequuntur quia animi quis voluptate quibusdam",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 53,
        "title": "ut quo aut ducimus alias",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 54,
        "title": "sit asperiores ipsam eveniet odio non quia",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 55,
        "title": "sit vel voluptatem et non libero",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 56,
        "title": "qui et at rerum necessitatibus",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 57,
        "title": "sed ab est est",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 58,
        "title": "voluptatum itaque dolores nisi et quasi",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 59,
        "title": "qui commodi dolor at maiores et quis id accusantium",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 60,
        "title": "consequatur placeat omnis quisquam quia reprehenderit fugit veritatis facere",
        "user": {
          "id": 6,
          "name": "Mrs. Dennis Schulist"
        }
      },
      {
        "id": 61,
        "title": "voluptatem doloribus consectetur est ut ducimus",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 62,
        "title": "beatae enim quia vel",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 63,
        "title": "voluptas blanditiis repellendus animi ducimus error sapiente et suscipit",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 64,
        "title": "et fugit quas eum in in aperiam quod",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 65,
        "title": "consequatur id enim sunt et et",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 66,
        "title": "repudiandae ea animi iusto",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 67,
        "title": "aliquid eos sed fuga est maxime repellendus",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 68,
        "title": "odio quis facere architecto reiciendis optio",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 69,
        "title": "fugiat quod pariatur odit minima",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 70,
        "title": "voluptatem laborum magni",
        "user": {
          "id": 7,
          "name": "Kurtis Weissnat"
        }
      },
      {
        "id": 71,
        "title": "et iusto veniam et illum aut fuga",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 72,
        "title": "sint hic doloribus consequatur eos non id",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 73,
        "title": "consequuntur deleniti eos quia temporibus ab aliquid at",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 74,
        "title": "enim unde ratione doloribus quas enim ut sit sapiente",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 75,
        "title": "dignissimos eum dolor ut enim et delectus in",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 76,
        "title": "doloremque officiis ad et non perferendis",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 77,
        "title": "necessitatibus quasi exercitationem odio",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 78,
        "title": "quam voluptatibus rerum veritatis",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 79,
        "title": "pariatur consequatur quia magnam autem omnis non amet",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 80,
        "title": "labore in ex et explicabo corporis aut quas",
        "user": {
          "id": 8,
          "name": "Nicholas Runolfsdottir V"
        }
      },
      {
        "id": 81,
        "title": "tempora rem veritatis voluptas quo dolores vero",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 82,
        "title": "laudantium voluptate suscipit sunt enim enim",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 83,
        "title": "odit et voluptates doloribus alias odio et",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 84,
        "title": "optio ipsam molestias necessitatibus occaecati facilis veritatis dolores aut",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 85,
        "title": "dolore veritatis porro provident adipisci blanditiis et sunt",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 86,
        "title": "placeat quia et porro iste",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 87,
        "title": "nostrum quis quasi placeat",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 88,
        "title": "sapiente omnis fugit eos",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 89,
        "title": "sint soluta et vel magnam aut ut sed qui",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 90,
        "title": "ad iusto omnis odit dolor voluptatibus",
        "user": {
          "id": 9,
          "name": "Glenna Reichert"
        }
      },
      {
        "id": 91,
        "title": "aut amet sed",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      },
      {
        "id": 92,
        "title": "ratione ex tenetur perferendis",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      },
      {
        "id": 93,
        "title": "beatae soluta recusandae",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      },
      {
        "id": 94,
        "title": "qui qui voluptates illo iste minima",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      },
      {
        "id": 95,
        "title": "id minus libero illum nam ad officiis",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      },
      {
        "id": 96,
        "title": "quaerat velit veniam amet cupiditate aut numquam ut sequi",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      },
      {
        "id": 97,
        "title": "quas fugiat ut perspiciatis vero provident",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      },
      {
        "id": 98,
        "title": "laboriosam dolor voluptates",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      },
      {
        "id": 99,
        "title": "temporibus sit alias delectus eligendi possimus magni",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      },
      {
        "id": 100,
        "title": "at nam consequatur ea labore ea harum",
        "user": {
          "id": 10,
          "name": "Clementina DuBuque"
        }
      }
    ]
  }
}
