src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__multiple_nested.snap
---
source: src/core/ir/jit/synth.rs
expression: val
---
{
  "data": {
    "posts": [
      {
        "id": 1,
        "title": "Some Title",
        "user": {
          "id": 1,
          "name": "foo"
        }
      },
      {
        "id": 2,
        "title": "Not Some Title",
        "user": {
          "id": 2,
          "name": "bar"
        }
      }
    ],
    "users": [
      {
        "id": 1,
        "name": "Leanne Graham"
      },
      {
        "id": 2,
        "name": "Ervin Howell"
      }
    ]
  }
}
