src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__posts.snap
---
source: src/core/ir/jit/synth.rs
expression: val
---
{
  "data": {
    "posts": [
      {
        "id": 1
      },
      {
        "id": 2
      }
    ]
  }
}
