src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__synth.snap
---
source: src/core/ir/jit/synth.rs
expression: actual
---
{
  "posts": [
    {
      "title": "My title",
      "body": "This is my first post.",
      "userId": 1
    },
    {
      "title": "Also My Title",
      "body": "This is my second post.",
      "userId": 2
    }
  ]
}
