src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__synth_all_posts_users.snap
---
source: src/core/ir/jit/synth.rs
expression: actual
---
{
  "posts": [
    {
      "id": 1,
      "title": "My title",
      "user": {
        "name": "Jane Doe"
      }
    },
    {
      "id": 2,
      "title": "Also My Title",
      "user": {
        "name": "Not Jane Doe"
      }
    }
  ]
}
