src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__synth_all_posts_users_todos.snap
---
source: src/core/ir/jit/synth.rs
expression: actual
---
{
  "posts": [
    {
      "title": "My title",
      "user": {
        "name": "Jane Doe",
        "todo": {
          "title": "My title",
          "completed": false
        }
      }
    },
    {
      "title": "Also My Title",
      "user": {
        "name": "Not Jane Doe",
        "todo": {
          "title": "Also My title",
          "completed": true
        }
      }
    }
  ]
}
