src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__synth_post_id.snap
---
source: src/core/ir/jit/synth.rs
expression: actual
---
{
  "userId": 1,
  "name": "Jane Doe"
}
