src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__synth_post_id_to_user.snap
---
source: src/core/ir/jit/synth.rs
expression: actual
---
{
  "id": 1,
  "title": "My title",
  "user": {
    "name": "Jane Doe"
  }
}
