src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__synth_users.snap
---
source: src/core/ir/jit/synth.rs
expression: actual
---
{
  "users": [
    {
      "name": "Jane Doe",
      "address": {
        "street": "Kulas Light"
      }
    }
  ]
}
