src/core/ir/jit/snapshots/tailcall__core__ir__jit__synth__tests__user.snap
---
source: src/core/ir/jit/synth.rs
expression: val
---
{
  "data": {
    "user": {
      "id": 1
    }
  }
}
